objects/Lead.object
<CustomObject>
    <fields>
        <fullName>LastSalesRepQueueAssignment__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <label>Last Sales Rep/Queue Assignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadAge2__c</fullName>
        <description>SFDC1-4760;Today&apos;s date minus the created on date(Hidden field which support Lead Age)</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadAge__c</fullName>
        <description>SFDC1-4760;Today&apos;s date minus the created on date</description>
        <formula>IF (LeadAge2__c&gt; 0, 
TEXT(FLOOR(LeadAge2__c)) &amp; &quot; Days &quot; &amp; 
TEXT( FLOOR( 24 * (LeadAge2__c - FLOOR(LeadAge2__c) ))) &amp; &quot; Hours&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since creation of lead</inlineHelpText>
        <label>Lead Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadDistributionNotes__c</fullName>
        <description>SFDC1 -105; Long Notes for a Lead</description>
        <inlineHelpText>Internal notes field for manual processing of lead.</inlineHelpText>
        <label>Lead Distribution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeadID18Character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Region__c</fullName>
        <description>US-4742552: Region of sales user in lead owner field.</description>
        <inlineHelpText>Region of lead owner of referrals and transfers.</inlineHelpText>
        <label>Lead Owner Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Transfer_Campaign_Source__c</fullName>
        <description>Maps to the lead source campaign from transfer lead form to track name of campaign.</description>
        <inlineHelpText>Includes campaign name of the lead being transferred for reference.</inlineHelpText>
        <label>Synergy Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <description>SFDC1 -105; Different stages for a lead life-cycle; Picklist value are different  for A/B leads &amp; C leads</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PendingMKTGQualification</fullName>
                    <label>Pending MKTG Qualification</label>
                </value>
                <value>
                    <fullName>Convert</fullName>
                </value>
                <value>
                    <fullName>Doesnotmeetrequirements/NeedmoreInformation</fullName>
                    <label>Does not meet requirements / Need more Information</label>
                </value>
                <value>
                    <fullName>PendingSalesQualification</fullName>
                    <label>Pending Sales Qualification</label>
                </value>
                <value>
                    <fullName>Nurtureopportunity</fullName>
                    <label>Nurture opportunity</label>
                </value>
                <value>
                    <fullName>Noadditionalopportunity</fullName>
                    <label>No additional opportunity</label>
                </value>
                <value>
                    <fullName>Leadexposedtosales</fullName>
                    <label>Lead exposed to sales</label>
                </value>
                <value>
                    <fullName>SenttoSales</fullName>
                    <label>Sent to Sales</label>
                </value>
                <value>
                    <fullName>SenttoCustomerCare</fullName>
                    <label>Sent to Customer Care</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6330 : Legacy Lead identifier for migrated cases. First 3 letters identifies the source system</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedInURL__c</fullName>
        <description>URL to Prospect&apos;s LinkedIn page</description>
        <label>LinkedIn URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <defaultValue>&apos;Are you sure you want to convert this case to a lead?&apos;</defaultValue>
        <description>SFDC1-5410 Field to display message on &apos;Convert to Lead&apos; case quick action</description>
        <inlineHelpText>Message</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Custom text field in Outreach for Leads</description>
        <label>Latest Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NamedAccount__c</fullName>
        <description>SFDC1-8820: Calculated field, populated when the Business Line, Domain of the lead&apos;s email, and region match a list of maintained Named Accounts.</description>
        <inlineHelpText>Calculated field, populated when the Business Line, Domain of the lead&apos;s email, and region match a list of maintained Named Accounts.</inlineHelpText>
        <label>Named Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <description>SFDC1- 105; Picklist value for Need</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes – Email Me</fullName>
                </value>
                <value>
                    <fullName>Yes – Call Me</fullName>
                </value>
                <value>
                    <fullName>Not interested in follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>SFHD1- 105; To track any valuable information about lead</description>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofDials__c</fullName>
        <description>SFDC1- 105; Text field for Dial increments</description>
        <inlineHelpText>Number of attempts to contact by Pre Sales</inlineHelpText>
        <label>Number of Dials</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1- 105; Lookup field for associated opportunity</description>
        <inlineHelpText>Please populate from associated  opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgLevel__c</fullName>
        <description>SFHD1- 105; Organisational level/Position of a contact/lead</description>
        <inlineHelpText>Contact&apos;s placement in the company</inlineHelpText>
        <label>Org Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>CEO or President</fullName>
                </value>
                <value>
                    <fullName>CXO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Non Management</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Option Value</fullName>
                    <isActive>false</isActive>
                    <label>Option Value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginatingBusinessDivision__c</fullName>
        <description>SFDC-4829; To track Business Division about lead</description>
        <label>Originating Business Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginatingNotes__c</fullName>
        <description>SFHD1- 105; To track any valuable information about lead</description>
        <inlineHelpText>Details regarding source of Marketing Lead and comments provided by Contact and/or Marketing</inlineHelpText>
        <label>Originating Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginatingSourceURL__c</fullName>
        <description>SFHD1- 105; Source URL for lead/contact</description>
        <inlineHelpText>URL where Form was submitted from</inlineHelpText>
        <label>Originating Source URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OutReachStatus__c</fullName>
        <description>Custom text field in Outreach for Leads</description>
        <label>OutReach Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New / Cold</fullName>
                </value>
                <value>
                    <fullName>Added to Sequence</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Marked as Finished (no reply)</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Closed Left Company</fullName>
                </value>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutreachID__c</fullName>
        <label>Outreach ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutreachOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutreachOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Outreach owner indicates who is prospecting this Lead in Outreach.</inlineHelpText>
        <label>Outreach Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OutreachLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Actively_being_sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actively being sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_ID__c</fullName>
        <label>Current Sequence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Name__c</fullName>
        <label>Current Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Status__c</fullName>
        <label>Current Sequence Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
        <label>Current Sequence Step Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
        <label>Current Sequence Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Task_Due_Date__c</fullName>
        <label>Current Sequence Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Sequence User Integration ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Outreach_Current_Sequence_User_ID_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Date_Added_to_Sequence__c</fullName>
        <inlineHelpText>Date field that is updated automatically when Lead are added to a new sequence</inlineHelpText>
        <label>Date Added to Sequence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Finished_Sequences__c</fullName>
        <description>All sequences that the prospect has completed via Outreach</description>
        <inlineHelpText>All sequences that the prospect has completed via Outreach</inlineHelpText>
        <label>Finished Sequences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Initial_Sequence_ID__c</fullName>
        <label>Initial Sequence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Initial_Sequence_Name__c</fullName>
        <label>Initial Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Sequences__c</fullName>
        <label>Number of Active Sequences</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Tasks__c</fullName>
        <label>Number of Active Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PKIDLead__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Led{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Lead</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PreSalesQualifiedDisqualified__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <label>Pre-Sales Qualified / Disqualified</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreSalesWorking__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <label>Pre-Sales Working</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1760 To track the user who Processed the Lead</description>
        <inlineHelpText>Internal Colleague who assigned the Lead</inlineHelpText>
        <label>Processed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProcessedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <description>SFDC1-1033,To be maintained in Eloqua</description>
        <inlineHelpText>Product that customer has expressed interest in</inlineHelpText>
        <label>Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>SFDC1-998;A formula field which comes from score on Lead object</description>
        <formula>IF(
    ISBLANK(TEXT(Rating)),
    NULL,
    IMAGE(
        &quot;/img/samples/stars_&quot; + TEXT(Rating) + &quot;00.gif&quot;,
        &quot; Rating Level&quot;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Star rating based on Call To Action and Verbal Qualification.</inlineHelpText>
        <label>Marketing Lead Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Account_CAPIQ_ID_Number__c</fullName>
        <description>DO NOT MODIFY. Part of SPG Referral process to map account CAPIQ ID from lead to account for SPG referral leads.</description>
        <formula>VALUE(Referral_Account_CAPIQ_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Account CAPIQ ID Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Account_CAPIQ_ID__c</fullName>
        <description>US-3861071: DO NOT MODIFY/DELETE. CI Referral package field. Tracks the CAPIQ ID for SPG Referral integration.</description>
        <inlineHelpText>Includes S&amp;P CAPIQ ID of the referred account.</inlineHelpText>
        <label>Referral Account CAPIQ ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <description>US-3861071: DO NOT MODIFY/DELETE. CI Referral package field. Includes the 18-digit Salesforce ID of the referral record that initiated the lead. Not visible to end users, will be used for tracking referral from lead to opportunity.</description>
        <label>Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Lead_Country__c</fullName>
        <description>Informatica integration inserts country values in this custom field before its translated to the acceptable value using custom metadata types and insert the updated value to the standard field.</description>
        <label>Referral Lead Country/Territory</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Lead_State__c</fullName>
        <description>Informatica integration inserts state/province values in this custom field before its translated to the acceptable value using custom metadata types and insert the updated value to the standard field.</description>
        <label>Referral Lead State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Lead_Type__c</fullName>
        <description>Informatica will insert referral, re-referral, or lead transfer based on the Lead_Type__c field on SPG_Referral_Lead object. This field will then be mapped to HUB Lead_Type__c field for HUB referral monitoring. End users do not need to see this field.</description>
        <label>Referral Lead Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Submitted_By__c</fullName>
        <description>US-3861071: DO NOT MODIFY/DELETE. CI Referral package field. Informatica will populate the name of the user who created the referral in the source org.</description>
        <inlineHelpText>Divisional Account Manager who created the referral.</inlineHelpText>
        <label>Referral Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Submitted_Date__c</fullName>
        <description>US-3905084: DO NOT MODIFY/DELETE. CI Referral package field. Tracks the date the referral was created from the divisional org of the source referral.</description>
        <label>Referral Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral_Submitter_Email__c</fullName>
        <description>US-3861071: DO NOT MODIFY/DELET. CI Referral package field. Informatica will update with the email of the user who created the referral in the source org.</description>
        <inlineHelpText>Email of divisional account manager who submitted the referral.</inlineHelpText>
        <label>Referral Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Submitter_Phone__c</fullName>
        <description>US-4760499: Informatica to insert phone number of user submitting the referral, tracked on source referral record.</description>
        <inlineHelpText>Phone number of the user submitting the referral or lead transfer.</inlineHelpText>
        <label>Referral Submitter Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Submitter_Region__c</fullName>
        <description>US-4742552: Informatica inserts lead region of the user submitting the referral or lead transfer from source division.</description>
        <inlineHelpText>Region of the sales user who submitted the referral or lead transfer.</inlineHelpText>
        <label>Referral Submitter Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-205 Adding a lookup to contact to replace original Referred by field which is a lookup to User object</description>
        <inlineHelpText>Indicates Sales Person who referred the Lead</inlineHelpText>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referred By)</relationshipLabel>
        <relationshipName>ReferredByContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1033;User lookup field for Lead</description>
        <inlineHelpText>Indicates Sales Person who referred the Lead</inlineHelpText>
        <label>Referred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedInteraction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1 - 105 ; A check box field for client</description>
        <inlineHelpText>Contact has requested follow up from Sales</inlineHelpText>
        <label>Requested Interaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevenueBand__c</fullName>
        <description>SFHD1- 105; Revenue Band for a prospect lead/Contact</description>
        <inlineHelpText>Annual Sales of company</inlineHelpText>
        <label>Revenue Band (USD)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$1 - $1M</fullName>
                </value>
                <value>
                    <fullName>$1M - $5M</fullName>
                </value>
                <value>
                    <fullName>$5M - $10M</fullName>
                </value>
                <value>
                    <fullName>$10M - $25M</fullName>
                </value>
                <value>
                    <fullName>$25M - $50M</fullName>
                </value>
                <value>
                    <fullName>$50M - $100M</fullName>
                </value>
                <value>
                    <fullName>$100M - $250M</fullName>
                </value>
                <value>
                    <fullName>$250M - $500M</fullName>
                </value>
                <value>
                    <fullName>$500M - $1B</fullName>
                </value>
                <value>
                    <fullName>$1B - $2.5B</fullName>
                </value>
                <value>
                    <fullName>$2.5B - $5B</fullName>
                </value>
                <value>
                    <fullName>Over $5B</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>1 - 1M</fullName>
                    <isActive>false</isActive>
                    <label>1 - 1M</label>
                </value>
                <value>
                    <fullName>100M - 250M</fullName>
                    <isActive>false</isActive>
                    <label>100M - 250M</label>
                </value>
                <value>
                    <fullName>10M - 25M</fullName>
                    <isActive>false</isActive>
                    <label>10M - 25M</label>
                </value>
                <value>
                    <fullName>1B - 2.5B</fullName>
                    <isActive>false</isActive>
                    <label>1B - 2.5B</label>
                </value>
                <value>
                    <fullName>1M - 5M</fullName>
                    <isActive>false</isActive>
                    <label>1M - 5M</label>
                </value>
                <value>
                    <fullName>2.5B - 5B</fullName>
                    <isActive>false</isActive>
                    <label>2.5B - 5B</label>
                </value>
                <value>
                    <fullName>250M - 500M</fullName>
                    <isActive>false</isActive>
                    <label>250M - 500M</label>
                </value>
                <value>
                    <fullName>25M - 50M</fullName>
                    <isActive>false</isActive>
                    <label>25M - 50M</label>
                </value>
                <value>
                    <fullName>500M - 1B</fullName>
                    <isActive>false</isActive>
                    <label>500M - 1B</label>
                </value>
                <value>
                    <fullName>50M - 100M</fullName>
                    <isActive>false</isActive>
                    <label>50M - 100M</label>
                </value>
                <value>
                    <fullName>5M - 10M</fullName>
                    <isActive>false</isActive>
                    <label>5M - 10M</label>
                </value>
                <value>
                    <fullName>Over 5B</fullName>
                    <isActive>false</isActive>
                    <label>Over 5B</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDRAssignmentTime__c</fullName>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <inlineHelpText>Number of days (fractional) between lead creation and assignment to SDR (Pre-Sales) queue</inlineHelpText>
        <label>SDR Assignment Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDRQualificationTime__c</fullName>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <inlineHelpText>Number of days (fractional) between Pre-Sales Working status and Pre-Sales Qualified status</inlineHelpText>
        <label>SDR Qualification Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDRQueueAssignment__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <label>SDR Queue Assignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDRTimetoPickup__c</fullName>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <inlineHelpText>Number of days (fractional) between SDR (Pre-Sales) queue assignment and move to Pre-Sales Working status</inlineHelpText>
        <label>SDR Time to Pick up</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Account_Description__c</fullName>
        <label>S&amp;P Capital IQ Account Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQCompanyID__c</fullName>
        <label>UNUSED_PE_S&amp;P Capital IQ Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQCompanyId_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQCompanyID__c!=0, TEXT(SNPCAPIQ__CapitalIQCompanyID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S&amp;P Capital IQ Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQPersonID__c</fullName>
        <label>UNUSED_PE_S&amp;P Capital IQ Person ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQPersonID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQPersonID__c!=0, Text(SNPCAPIQ__CapitalIQPersonID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S&amp;P Capital IQ Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQProfessionalID__c</fullName>
        <label>UNUSED_PE_S&amp;P Capital IQ Professional ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQProfessionalID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQProfessionalID__c!=0, Text(SNPCAPIQ__CapitalIQProfessionalID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S&amp;P Capital IQ Professional ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQRevenueUSD__c</fullName>
        <label>S&amp;P Capital IQ Revenue (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Company_Type__c</fullName>
        <label>S&amp;P Capital IQ Company Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Contact_Description__c</fullName>
        <label>S&amp;P Capital IQ Contact Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Industry__c</fullName>
        <label>S&amp;P Capital IQ Primary Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Is_DB_USA_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include expanded business listings</description>
        <inlineHelpText>Include expanded business listings</inlineHelpText>
        <label>Include expanded business listings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__LastUpdatedDate__c</fullName>
        <label>S&amp;P Capital IQ Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__PE_CapitalIQCompanyID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQCompanyID__c!=0, TEXT(SNPCAPIQ__CapitalIQCompanyID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PE_S&amp;P Capital IQ Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__PE_CapitalIQPersonID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQPersonID__c!=0, Text(SNPCAPIQ__CapitalIQPersonID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PE_S&amp;P Capital IQ Person ID</label>
        <type>Text</type>
    </fields>
</CustomObject>